# dax-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: dax.toml.example  mcp_servers.toml
scripts/: download_models.py  enroll_voice.py  install-service.sh  install.sh
src/dax/: __init__.py  __main__.py  app.py
src/dax/channels/: telegram_channel.py  voice_channel.py  web_channel.py  whatsapp_channel.py
src/dax/core/: config.py  config_io.py  exceptions.py  logbuffer.py  models.py  policy.py  ports.py  shell_allow.py
src/dax/llm/: client.py  factory.py  router.py  tool_mapper.py
src/dax/llm/providers/: __init__.py  anthropic_provider.py  codex_provider.py  gemini_provider.py  openai_provider.py
src/dax/mcp/: client.py  manager.py  registry.py
src/dax/mcp_servers/: __init__.py
src/dax/mcp_servers/system/: __init__.py  __main__.py  server.py
src/dax/orchestrator/: agent.py  approval.py  bus.py  dispatcher.py  prompting.py  tool_gate.py
src/dax/storage/: database.py  repository.py  secrets.py
src/dax/voice/: __init__.py  audio_io.py  pipeline.py  speaker.py  stt.py  tts.py  tts_kokoro.py  vad.py  wakeword.py
src/dax/web/: auth.py  dependencies.py  server.py  spa_middleware.py
src/dax/web/routes/: api.py  auth.py  chat.py  config.py  conversations.py  logs.py  mcp.py  memory.py  oauth.py  system.py  webhooks.py
src/dax/web/static/: index.html
src/dax/web/static/assets/: index-3Kq-PHu_.js  index-B6SL9Egc.js  index-BHKrmZ7T.css  index-BJFHhi8n.js  index-BLfqEb8P.js  index-BN-oDoBg.js  index-Bf-oPrr2.js  index-CF49rBiO.js  index-CnNPWR3N.css  index-CqXBTDju.js  index-Cq_EU3ax.css  index-DB__7cO-.css  index-DIJ3sWMh.js  index-DTKZDrzF.css  index-DVOImi-A.js  index-D_TggUEZ.js  index-DgF8jv3e.js  index-DgcnhzX7.css  index-Dho-5Wdu.css  index-DlTiwKgI.css  index-Dt46SNZN.css  index-LbX7E2Wk.js  index-ZIrGS4xb.js
systemd/: dax-assistant.service
tests/: conftest.py
tests/e2e/: test_e2e_web.py
tests/integration/: test_storage.py
tests/unit/: test_agent.py  test_api.py  test_approval.py  test_auth.py  test_bus.py  test_config.py  test_config_io.py  test_mcp_manager.py  test_models.py  test_policy.py  test_prompting.py  test_providers.py  test_registry.py  test_shell_allow.py  test_system_server.py  test_tool_mapper.py  test_voice.py  test_webhooks.py  test_whatsapp_channel.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: AppLayout.tsx  AppShell.tsx  AuthGate.tsx  Markdown.tsx  ThemeToggle.tsx  ToastProvider.tsx  ui.tsx
web/src/hooks/: useChatSocket.ts  useConfig.ts  useLogStream.ts  useTheme.ts
web/src/pages/: Chat.tsx  Dashboard.tsx  Login.tsx  Logs.tsx  Mcp.tsx  McpMarketplace.tsx  Shell.tsx
web/src/pages/Chat/: ChatPage.tsx  index.ts
web/src/pages/Dashboard/: DashboardPage.tsx
web/src/pages/Login/: LoginPage.tsx
web/src/pages/Settings/: GeneralTab.tsx  LLMTab.tsx  MCPServersTab.tsx  SettingsPage.tsx  VoiceTab.tsx  WhatsAppTab.tsx
web/src/pages/settings/: GeneralTab.tsx  LLMTab.tsx  McpTab.tsx  MemoryTab.tsx  ServerTab.tsx  SettingsPage.tsx  TelegramTab.tsx  ToolsTab.tsx  VoiceTab.tsx  WhatsAppTab.tsx
web/src/styles/: globals.css
web/src/test/: App.test.tsx  setup.ts  smoke.test.tsx
web/src/types/: config.ts
