[project]
name = "dax-assistant"
version = "0.1.0"
description = "Voice-first personal AI assistant — self-hosted, MCP-centric, local LLM primary"
requires-python = ">=3.11,<3.12"
license = "MIT"
authors = [{ name = "Dax", email = "dax@daxrpm.dev" }]
keywords = ["assistant", "voice", "mcp", "ollama", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "tomli-w>=1.0",
    "aiosqlite>=0.21",
    "mcp>=1.9",
    "httpx>=0.28",
    "structlog>=25.1",
    "python-dotenv>=1.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # LLM provider SDKs (official) + universal fallback
    "anthropic>=0.40",
    "openai>=1.60",
    "google-genai>=1.0",
    "litellm>=1.72",
    # Auth / security
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
    "cryptography>=43.0",
]

[project.optional-dependencies]
voice = [
    "openwakeword>=0.6",
    "faster-whisper>=1.2",
    "silero-vad>=6.2",
    "piper-tts>=1.4",
    # Natural neural TTS (default engine); Piper stays as the fast fallback.
    "kokoro-onnx>=0.4",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "onnxruntime>=1.16",
    # Pre-STT background-noise suppression (best-effort; pipeline degrades
    # gracefully if absent).
    "noisereduce>=3.0",
    # Speaker verification (Voice ID) — lightweight, optional at runtime.
    "resemblyzer>=0.1.4",
]
dev = [
    "ruff>=0.11",
    "mypy>=1.16",
    "pre-commit>=4.2",
]
test = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.2",
]

[project.scripts]
dax = "dax.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dax"]

[tool.hatch.build.targets.wheel.force-include]
"src/dax/web/static" = "dax/web/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow running",
    "integration: marks integration tests (require external services)",
    "e2e: marks end-to-end tests",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["dax"]

[tool.ruff.lint.per-file-ignores]
# FastAPI resolves Annotated[..., Depends(...)] dependency annotations at runtime
# via get_type_hints(), so their imports must stay runtime imports even though
# they appear only in annotations. TC001/TC002 would wrongly relocate them.
"src/dax/web/routes/*.py" = ["TC001", "TC002"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# Third-party voice/ML libraries ship no type stubs; don't fail strict mode on
# their untyped imports (our own wrappers are still fully typed).
[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "piper.*",
    "silero_vad.*",
    "openwakeword.*",
    "kokoro_onnx.*",
    "resemblyzer.*",
    "noisereduce.*",
    "sounddevice.*",
    "ctranslate2.*",
]
ignore_missing_imports = true
